# avr-eeprom-wear-leveling

./: .gitignore  CMakeLists.txt  README.md
include/: EEPROMBitSentinelWearLeveling.h  EEPROMByteSentinelWearLeveling.h  EEPROMByteSentinelWearLevelingAsync.h
src/: eeprom_async.cpp
test/: tests_bit.cpp  tests_byte.cpp  tests_utils.cpp  tests_utils.h
test/mock/avr/: eeprom.h
